Invalid Mesh using Unsubdivide Operator #87259

Closed
opened 2021-04-07 10:08:38 +02:00 by Himanshi Kalra · 7 comments
Member

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce MX150/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.93.0 Alpha
Worked: (newest version of Blender that worked as expected)

Short description of error
Getting invalid mesh using unsubdivide operator.
Trace:
ERROR (bke.mesh): C:\blender-git\blender\source\blender\blenkernel\intern\mesh_validate.c:706 BKE_mesh_validate_arrays: Polys 1 and 0 use same vertices (0

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]

  1. Add a UV sphere.
  2. Go to Edit Mode.
  3. Set Selection Mode to be either Edges or Faces. (by default its vertices)
  4. Right click and click on Unsubdivide
  5. Make the number of iterations to 8 or more.
    The resultant mesh is an invalid mesh.
    Attached blend file:
    invalid_mesh_bug.blend
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce MX150/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.93.0 Alpha Worked: (newest version of Blender that worked as expected) **Short description of error** Getting invalid mesh using unsubdivide operator. Trace: ```ERROR (bke.mesh): C:\blender-git\blender\source\blender\blenkernel\intern\mesh_validate.c:706 BKE_mesh_validate_arrays: Polys 1 and 0 use same vertices (0``` **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] 1) Add a UV sphere. 2) Go to Edit Mode. 3) Set Selection Mode to be either Edges or Faces. (by default its vertices) 3) Right click and click on Unsubdivide 4) Make the number of `iterations` to 8 or more. The resultant mesh is an invalid mesh. Attached blend file: [invalid_mesh_bug.blend](https://archive.blender.org/developer/F9922597/invalid_mesh_bug.blend)
Author
Member

Added subscriber: @Calra

Added subscriber: @Calra
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Nice find!

Will dare setting this to High priority since I have seen validation errors like these in many previous reports

ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:706 BKE_mesh_validate_arrays: 	Polys 0 and 1 use same vertices (0
ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:708 BKE_mesh_validate_arrays: , 1
ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:708 BKE_mesh_validate_arrays: , 2
ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:710 BKE_mesh_validate_arrays: ), considering poly 1 as invalid.
ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:782 BKE_mesh_validate_arrays: 	Loop 3 is unused.
ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:782 BKE_mesh_validate_arrays: 	Loop 4 is unused.
ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:782 BKE_mesh_validate_arrays: 	Loop 5 is unused.
Nice find! Will dare setting this to High priority since I have seen validation errors like these in many previous reports ``` ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:706 BKE_mesh_validate_arrays: Polys 0 and 1 use same vertices (0 ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:708 BKE_mesh_validate_arrays: , 1 ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:708 BKE_mesh_validate_arrays: , 2 ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:710 BKE_mesh_validate_arrays: ), considering poly 1 as invalid. ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:782 BKE_mesh_validate_arrays: Loop 3 is unused. ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:782 BKE_mesh_validate_arrays: Loop 4 is unused. ERROR (bke.mesh): source/blender/blenkernel/intern/mesh_validate.c:782 BKE_mesh_validate_arrays: Loop 5 is unused. ```
Author
Member

I was working on D10893.
These test cases needs to be added after they have been fixed.

I have found another case, I ran Un-Subdivide on the Default Cube for all Edges from 1...12.
If we select 6 Edges or 7 Edges (0-6) or (0-7) or 1 face (4 Edges) + 2 Edges as shown below, invalid mesh is generated.

\_\
|_|```
| -- | -- |
For the rest of the cases, it generates a valid mesh.
Invalid mesh generated is the triangle with 2 faces. (same as the above reported case)

I was working on [D10893](https://archive.blender.org/developer/D10893). These test cases needs to be added after they have been fixed. I have found another case, I ran Un-Subdivide on the Default Cube for all Edges from 1...12. If we select 6 Edges or 7 Edges (0-6) or (0-7) or 1 face (4 Edges) + 2 Edges as shown below, invalid mesh is generated. ``` \_\ |_|``` | -- | -- | For the rest of the cases, it generates a valid mesh. Invalid mesh generated is the triangle with 2 faces. (same as the above reported case)

This issue was referenced by 2a14ab998a

This issue was referenced by 2a14ab998a576df6ba1fa5dc2c680d9078e58f81

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-04-12 06:30:10 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87259
No description provided.