Fix T87259: Un-Subdivide creates duplicate faces

Add argument to BM_vert_collapse_faces to remove any faces that become
duplicate as result of the collapse.